--- a/BPCalculator/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/BPCalculator/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,1 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+﻿<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
