--- a/BPCalculator/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/BPCalculator/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,1 +1,1 @@
-﻿<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+﻿<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js" integrity="sha256-TAzGN4WNZQPLqSYvi+dXQMKehTYFoVOnveRqbi42frA=" crossorigin="anonymous"></script>
