--- a/BPCalculator/Pages/Index.cshtml
+++ b/BPCalculator/Pages/Index.cshtml
@@ -24,7 +24,7 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Submit" class="btn btn-outline-secondary" />
+                <input type="submit" value="Submit" class="btn btn-outline-secondary" id="button_submit" />
             </div>
             <br/>
             @if (ViewData.ModelState.IsValid)
@@ -38,7 +38,7 @@
                                      _ => "alert-info"
                                  };
 
-                <div class="@alertClass" role="alert">
+                <div class="@alertClass" role="alert" id="alert_result">
                     @Html.DisplayFor(model => model.BP.Category, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             }
