--- a/BPCalculator/Pages/Index.cshtml
+++ b/BPCalculator/Pages/Index.cshtml
@@ -41,6 +41,11 @@
                 <div class="@alertClass" role="alert" id="alert_result">
                     @Html.DisplayFor(model => model.BP.Category, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
+
+                <div id="charts" class="row">
+                    <div id="chart_div_systolic" class="col-sm-6"></div>
+                    <div id="chart_div_diastolic" class="col-sm-6"></div>
+                </div>
             }
         </form>
     </div>
@@ -48,4 +53,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{await Html.RenderPartialAsync("_ChartsScriptsPartial");}
+
+    <script>drawChart();</script>
 }
